--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -116,6 +116,12 @@
     <artifactId>hibernate-commons-annotations</artifactId>
     <version>4.0.5.Final</version>
 </dependency>
+<dependency>
+<groupId>commons-fileupload</groupId>
+ <artifactId>commons-fileupload</artifactId>
+ <version>1.3.1</version>
+</dependency>
+
 <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 <dependency>
     <groupId>org.hibernate</groupId>
