--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -458,6 +458,25 @@
       <scope>test</scope>
     </dependency>
   
+  
+  <dependency>
+	 <groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>4.1.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+			<version>4.1.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		
   </dependencies>
   <build>
     <finalName>backend</finalName>
